[build-system]
requires = [
    "setuptools>=45",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "clstock"
version = "1.0.0"
description = "84.6%精度達成の株式投資システム"
authors = [
    { name = "ClStock Team", email = "team@clstock.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "yfinance>=0.1.63",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "xgboost>=1.4.0",
    "lightgbm>=3.2.0",
    "tensorflow>=2.6.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "requests>=2.25.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]

[tool.black]
line-length = 88
target-version = [
    "py38",
    "py39",
    "py310",
    "py311",
]
include = "\\.pyi?$"
exclude = "/(\n    \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | _build\n  | buck-out\n  | build\n  | dist\n  | __pycache__\n)/\n"

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "E501",
    "W503",
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg",
    ".venv",
    ".mypy_cache",
    "archive",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "xgboost.*",
    "lightgbm.*",
    "tensorflow.*",
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=. --cov-report=term-missing --cov-report=html"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]

[tool.coverage.run]
source = [
    ".",
]
omit = [
    "tests/*",
    "venv/*",
    "*/venv/*",
    "*/site-packages/*",
    "setup.py",
    "__pycache__/*",
    "*/migrations/*",
    "*/static/*",
    "*/media/*",
    "archive/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.vulture]
exclude = [
    "archive",
]
min_confidence = 90
ignore_names = [
    "cv2",
    "ImageDraw",
    "n_clicks",
    "n_intervals",
    "sklearn",
    "aioredis",
    "mp",
    "cp",
    "frame",
]

[tool.xenon]
max-average = 10
max-complexity = 20

[tool.bandit]
exclude_dirs = [
    "tests",
    "venv",
    "archive",
]
skips = [
    "B101",
    "B601",
]

[tool.bandit.assert_used]
skips = [
    "**/test_*.py",
    "**/*_test.py",
]
